cambios en la clase program

--- a/ApiRepuestosCarros/appsettings.json
+++ b/ApiRepuestosCarros/appsettings.json
@@ -6,8 +6,15 @@
     }
   },
   "ConnectionStrings": {
-    "SqlConnection": "Server=DESKTOP-DJVR19C\\SQLEXPRESS; Database=RepuestosCarros; User ID=sa; Password=sQl_db2023; Trusted_Connection=false;"
-    //"SqlConnection": "Server=tcp:etps3server.database.windows.net,1433;Initial Catalog=RepuestosCarros;Persist Security Info=False;User ID=etps3admin;Password=etps3Utec;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"SqlConnection": "Server=DESKTOP-DJVR19C\\SQLEXPRESS; Database=RepuestosCarros; User ID=sa; Password=sQl_db2023; Trusted_Connection=false;"
+    "SqlConnection": "Server=tcp:etps3server.database.windows.net,1433;Initial Catalog=RepuestosCarros;Persist Security Info=False;User ID=etps3admin;Password=etps3Utec;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JWT": {
+    "ClaveSecreta": "ClaveSecreta123456789",
+    "Issuer": "localhost:7205/",
+    "Audience":  "localhost:7205/"
+  }
+
 }
